--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "v1",
   "version": "1.0.0",
   "description": "YelpCamp",
-  "main": "app.js",
+  "main": "app",
   "scripts": {
-    "start": "node app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app"
   },
   "author": "Philip Tang",
   "license": "ISC",
