--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "yelp-camp",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app"
   },
   "author": "Philip",
   "license": "ISC",
