--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "yelp-camp",
+  "name": "v1",
   "version": "1.0.0",
-  "description": "",
-  "main": "app",
+  "description": "YelpCamp Refactor",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Philip",
+  "author": "Philip Tang",
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
-    "body-parser": "^1.17.2",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
-    "ejs": "^2.5.6",
-    "express": "^4.15.3",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^4.0.0",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
     "express-session": "^1.15.3",
-    "geocoder": "^0.2.3",
-    "method-override": "^2.3.9",
-    "moment": "^2.18.1",
-    "mongoose": "^4.11.0",
+    "geocoder": "^0.2.2",
+    "method-override": "^2.3.5",
+    "moment": "^2.17.1",
+    "mongoose": "^4.10.8",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^3.1.0",
+    "request": "^2.65.0"
   }
 }
